# AST245-Computational-Astrophysics

./: .clang-format  .gitignore  .gitmodules  .ignore  README.md
exercises/kepler/: .clang-format  CMakeLists.txt  Makefile  README.md  kepler.cpp  main.cpp  ode_solver.cpp  ode_solver.hpp  particle.cpp  particle.hpp
exercises/kepler/includes/: ode_solver.hpp  particle.hpp
exercises/n-body/: CMakeLists.txt  Makefile  README.md  flake.nix  vcpkg.json
exercises/n-body/cmake/modules/: FindMathGL.cmake
exercises/n-body/data/: data-red.txt
exercises/n-body/docs/: infos.md
exercises/n-body/include/: data.hpp  histogram.hpp  node.hpp  octree.hpp  particle.hpp  shell.hpp  system.hpp  timer.hpp  treecode.hpp  types.hpp
exercises/n-body/src/: data.cpp  histogram.cpp  main.cpp  node.cpp  octree.cpp  particle.cpp  shell.cpp  system.cpp  timer.cpp  treecode.cpp
includes/: logging.hpp  mpint.h
presentation/: main.tex  refs.bib  slides.tex
presentation/tasks/: introduction.tex  task1.tex  task2.tex
